--- a/index.html
+++ b/index.html
@@ -291,12 +291,13 @@
         </div>
     </section>
 
-    <section class="cta">
-        <div class="container">
-            <h2>Ready to Launch Your Career?</h2>
-            <a href="jbseek.html" class="btn">Start Your Journey Now</a>
-        </div>
-    </section>
+<section class="cta">
+    <div class="container">
+        <h2>Ready to Launch Your Career?</h2>
+        <a href="job-copilot.html" class="btn">Start Your Journey Now</a>
+        <a href="https://payhip.com/auth/register/af681a31bb992f0" class="btn" style="margin-top: 1rem; background: var(--secondary);">Become an Affiliate</a>
+    </div>
+</section>
 
     <footer>
         <p>&copy; 2025 Career Launchpad. All rights reserved.Madec by Sky</p>
